# hentai

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.zh.md  SECURITY.md  exp.py  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: codecov.yml  codeql-analysis.yml  python-app.yml  python-publish.yml
data/: ids.csv
dev/: dev.py
hentai/: __init__.py  hentai.py
hentai/data/: artists.json  characters.json  groups.json  ids.csv  languages.json  parodys.json  tags.json
requirements/: common.txt  dev.txt  rec.txt  release.txt
src/hentai/: SECURITY.md  __init__.py  __main__.py  hentai.py
tests/: 177013.json  228922.json  269582.json  297974.json  test_cli.py  test_hentai.py  test_page.py  test_requesthandler.py  test_tag.py  test_utils.py
