[metadata]
name = hentai
author = hentai-chan
url = https://github.com/hentai-chan/hentai
version = 1.0a
description = Python wrapper for the nhentai.net API
long_description = file:README.md
long_description_content_type = text/markdown
python_requires = >= 3.8
install_requires = requests
classifiers = Development Status :: 3 - Alpha
              License :: OSI Approved :: GNU General Public License v3 (GPLv3)
              Programming Language :: Python :: 3.8
              Operating System :: OS Independent
              Topic :: Education
              Topic :: Software Development :: Libraries
              Topic :: Utilities

[options]
packages = find: