[metadata]
name = hentai
author = hentai-chan
author-email = dev.hentai-chan@outlook.com
url = https://github.com/hentai-chan/hentai
license-file = LICENSE
description = "Implements a wrapper class around nhentai's RESTful API."
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >= 3.7
install_requires = 
    requests 
    faker
classifiers = Development Status :: 5 - Production/Stable
              Intended Audience :: Developers
              License :: OSI Approved :: GNU General Public License v3 (GPLv3)
              Natural Language :: English
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
              Operating System :: OS Independent
              Topic :: Education
              Topic :: Internet :: WWW/HTTP :: Dynamic Content
              Topic :: Software Development :: Libraries
              Topic :: Utilities
keywords = NSFW hentai nhentai.net API
project_urls = 
    Source Code = https://github.com/hentai-chan/hentai
    Bug Tracker = https://github.com/hentai-chan/hentai/issues
    Documentation = http://hentaichan.pythonanywhere.com/projects/hentai

[options]
packages = find:
